<resources>
    <string name="app_name">MusicStore</string>
    <string name="title_store">Store</string>
    <string name="title_library">Library</string>
    <string name="title_account">Account</string>
    <string name="title_activity_scrolling">ScrollingActivity</string>
    <string name="action_settings">Settings</string>
<!--    music detail activity -->

    <string name="music_detail_activity_label">Show more like this</string>
    <string name="music_detail_activity_buy_btn">Buy now</string>
    <string name="store_search_hint">Name, Artist , Album</string>
    <string name="dialog_fragment_checkout_title">Check Out</string>
    <string name="dialog_fragment_checkout_btn_cancel">Cancel</string>
    <string name="dialog_fragment_checkout_creditcard_number_hint">Credit Card Number</string>
    <string name="dialog_fragment_checkout_creditcard_holder_hint">Credit Card Holder</string>
    <string name="dialog_fragment_checkout_creditcard_expiration">Expiration Date</string>
    <string name="dialog_fragment_checkout_creditcard_code">CSV</string>
</resources>